--- a/libnvo/estilos_login.css
+++ b/libnvo/estilos_login.css
@@ -263,3 +263,18 @@ input:-webkit-autofill {
     margin: 0px;    
     box-shadow: inset 2px 1px 2px rgba(128, 139, 150,0.4);
 }
+#boxTable div input[type=text],
+#boxTable div input[type=password],
+#boxTable div select {
+    width: 240px !important;
+    height: 35px;
+    text-align: center;
+    font-size: 16px;
+    box-shadow: 2px 2px 2px 0px #DADADA !important;
+    background-color: white !important;
+    color: #808B96 !important;
+    font-weight: bold;
+    border: 0px;
+    border-bottom: 1px solid #ABB2B9 !important;
+    border-right: 1px solid #ABB2B9 !important;
+}
